--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -23,7 +23,7 @@ RUN JOBS=MAX npm install --production --unsafe-perm && npm cache clean && rm -rf
 # This will copy all files in our root to the working  directory in the container
 COPY . ./
 
-RUN JOBS=MAX npm build dev
+RUN JOBS=MAX npm run build
 
 # Enable systemd init system in container
 ENV INITSYSTEM on
