--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-ws": "^4.0.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-keyboard-shortcuts": "^1.1.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "victory": "^30.3.1"
