--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server/index.js",
     "build": "webpack --mode production",
+    "prepublishOnly": "npm-bump patch",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
     "server": "nodemon src/server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
@@ -17,6 +18,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-ws": "^4.0.0",
+    "npm-bump": "0.0.25",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-keyboard-shortcuts": "^1.1.3",
